--- a/development/index.html
+++ b/development/index.html
@@ -4,7 +4,7 @@
   <title>Моя веб-страница</title>
 </head>
 <body>
-  <h1>Привет, мир!</h1>
+  <h1>Hello, World!</h1>
   <p>Это моя первая веб-страница.</p>
 </body>
 </html>
