--- a/development/index.html
+++ b/development/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Hello, World!</h1>
-  <p>Это моя первая веб-страница.</p>
+  <p>Это моя вторая веб-страница.</p>
 </body>
 </html>
 
