--- a/development/index.html
+++ b/development/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Моя веб-страница</title>
+  <title>Наша веб-страница</title>
 </head>
 <body>
   <h1>Hello, World!</h1>
